@@ -1,3 +1,7 @@
+2008-05-03  Pedro Alves  <pedro@codesourcery.com>
+
+	* observer.texi (thread_exit): New.
+
 2008-05-02  Pedro Alves  <pedro@codesourcery.com>
 
 	* gdb.texinfo (Debugging Output): Document "set/show debug
